// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image renders correctly 1`] = `
<img
  style={
    Object {
      "maxWidth": "100%",
    }
  }
/>
`;

exports[`image renders correctly when not on mobile 1`] = `
<img
  className="noMobile-image"
  style={
    Object {
      "maxWidth": "100%",
    }
  }
/>
`;
